--- a/.gitignore
+++ b/.gitignore
@@ -1,211 +1,11 @@
-import Result from '#features/shared/result.js'
-import numberToCurrency from '#core/helpers/currency.js'
-import { FeeCase } from '#src/models/entities/FeeCase.js'
-import { Field } from '#src/models/entities/Fields.js'
-import { Fee } from '#src/models/entities/Fees.js'
-const { logger } = global
+#!/usr/bin/env sh
+. "$(dirname -- "$0")/_/husky.sh"
 
-export default class FeeCaseCreateUseCase {
-  async execute(feeTicketRequest) {
-    logger.info('FeeCaseCreateUseCase()')
-    const feeTicket = new FeeCase(feeTicketRequest)
+# run commit lint
+npx commitlint --edit
 
-    const fieldsDataBase = await this.#getFeeStandard([
-      {
-        feeType: 'Customer Fees'
-      },
-      {
-        feeType: 'Bank Account Fees'
-      },
-      {
-        feeType: 'Investment Account Fees'
-      }
-    ])
+# run eslint
+yarn lint
 
-    const allExceptions = this.#returnAllExceptions(fieldsDataBase)
-
-    logger.info('validateSync()')
-    const validate = feeTicket.validateSync()
-
-    if (validate && validate?.errors) {
-      return Result.fail(validate.errors)
-    }
-    let hasAnyChange = false
-    for (const fee of feeTicket.fees) {
-      for (const [groupIndex, group] of fee.feeGroups.entries()) {
-        for (const [fieldIndex, field] of group.fields.entries()) {
-          if (field.isException) {
-            // se for uma exception, verifica se é uma alteração
-            const newValue =
-              field.defaultValue !==
-              fee.feeGroups[groupIndex - 1].fields[fieldIndex].defaultValue
-            const validValue =
-              !!field.defaultValue && field.defaultValue !== 'NOT APPLICABLE'
-            field.hasChanged = newValue && validValue
-
-            if (field.hasChanged) {
-              hasAnyChange = true
-              fee.hasAnyChange = true
-              group.hasAnyChange = true
-              fee.feeGroups[groupIndex - 1].hasAnyChange = true
-              fee.feeGroups[groupIndex - 2].hasAnyChange = true
-            }
-
-            if (!field.hasChanged) {
-              field.defaultValue =
-                fee.feeGroups[groupIndex - 1].fields[fieldIndex].defaultValue
-            }
-          }
-
-          if (/^\d+$/.test(field.defaultValue)) {
-            // se o defaultvalue tiver apenas digitos
-            field.labelValue = numberToCurrency(field.defaultValue)
-            continue
-          }
-
-          // safekeeping ou equity
-          if (field.labelValue === 'Other') {
-            const other = field.exceptionOptions.filter(
-              (x) => x.text === 'Other'
-            )[0]
-            const fieldEquities = (
-              await Field.find({
-                code: 7,
-                isException: true
-              })
-            )[0]
-
-            field.exceptionOptions = [...fieldEquities.exceptionOptions, other]
-          } else if (
-            !field.labelValue ||
-            !field.labelValue.includes(field.defaultValue)
-          ) {
-            let exception = allExceptions.find(
-              (e) => e.value === field.defaultValue
-            )
-
-            if (!exception) {
-              exception = { text: '' }
-            }
-
-            field.labelValue = exception.text
-          }
-        }
-      }
-    }
-
-    if (!hasAnyChange) {
-      return Result.fail('Cannot create Fee Case without any change.')
-    }
-
-    feeTicket.fees = feeTicket.fees.filter((x) => x.hasAnyChange)
-    feeTicket.fees?.forEach((item) => {
-      item.feeGroups = item.feeGroups.filter((x) => x.hasAnyChange)
-    })
-
-    try {
-      const model = await feeTicket.save()
-      return Result.ok(model.toObject())
-    } catch (err) {
-      logger.error(err)
-      return Result.fail('Error when try to save Fee Case')
-    }
-  }
-
-
-  // async #getFeeStandard(filter) {
-  //   logger.info('getFeeStandard()');
-
-  //   // INSERIR PROCEDURE APOS CRIADA
-  //   const connection = await connectToFeeMgmtDb(); 
-  //   const recordset = await executeStoreProcedure(connection, 'sp_get_standard_fees', {});
-
-  //   const feeResult = recordset.map((record) => {
-  //     return {
-  //       feeType: record.feeType,
-  //       feeGroups: [
-  //         {
-  //           name: record.feeGroup,
-  //           code: record.groupCode,
-  //           fields: [
-  //             {
-  //               code: record.fieldCode,
-  //               name: record.fieldName,
-  //               defaultValue: record.defaultValue,
-  //               isStandard: record.isStandard === 1,
-  //             },
-  //           ],
-  //         },
-  //       ],
-  //     };
-  //   });
-
-  //   return feeResult;
-  // }
-
-  async #getFeeStandard(filter) {
-    logger.info('getFeeStandard()');
-  
-    // =====================
-    // Alteração para buscar Standard Fees e Exception Fees do SQL
-    const connection = await connectToFeeMgmtDb();
-    const standardRecordset = await executeStoreProcedure(connection, 'sp_get_standard_fees', {});
-    const exceptionRecordset = await executeStoreProcedure(connection, 'sp_get_exception_fees', {});
-  
-    const standardFees = standardRecordset.map((record) => ({
-      feeType: record.feeType,
-      feeGroups: [
-        {
-          name: record.feeGroup,
-          code: record.groupCode,
-          fields: [
-            {
-              code: record.fieldCode,
-              name: record.fieldName,
-              defaultValue: record.defaultValue,
-              isStandard: record.isStandard === 1,
-            },
-          ],
-        },
-      ],
-    }));
-  
-    const exceptionFees = exceptionRecordset.map((record) => ({
-      feeType: record.feeType,
-      feeGroups: [
-        {
-          name: record.feeGroup,
-          code: record.groupCode,
-          fields: [
-            {
-              code: record.fieldCode,
-              name: record.fieldName,
-              defaultValue: record.defaultValue,
-              isException: record.isException === 1,
-              exceptionOptions: record.exceptionOptions
-                ? JSON.parse(record.exceptionOptions)
-                : [],
-            },
-          ],
-        },
-      ],
-    }));
-  
-    return [...standardFees, ...exceptionFees];
-  }
-
-  #returnAllExceptions(fees) {
-    logger.info('returnAllExceptions()')
-    const allExceptions = new Set()
-    fees.forEach((fee) => {
-      fee.feeGroups.forEach((feeGroup) => {
-        feeGroup.fields.forEach((field) => {
-          if (field.isException) {
-            field.exceptionOptions.forEach(allExceptions.add, allExceptions)
-          }
-        })
-      })
-    })
-    return Array.from(allExceptions)
-  }
-}
+# run tests
+yarn test
