--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-Uncaught TypeError TypeError: Cannot read properties of undefined (reading 'info')
-    at #bootstrap (h:\Documents\fee-management-backend\src\app\api\apiServer.js:108:19)
-    at launch (h:\Documents\fee-management-backend\src\app\api\apiServer.js:122:26)
-    at run (h:\Documents\fee-management-backend\src\app\app.js:18:20)
-    at <anonymous> (h:\Documents\fee-management-backend\src\app\api\index.js:6:13)
-    at processTicksAndRejections (<node_internals>/internal/process/task_queues:95:5)
-apiServer.js:108
-Process exited with code 1
+MongooseServerSelectionError: getaddrinfo ENOTFOUND mongodb.safra-data
+    at _handleConnectionErrors (h:\Documents\fee-management-backend\node_modules\mongoose\lib\connection.js:755:11)
+    at NativeConnection.openUri (H:\Documents\fee-management-backend\node_modules\mongoose\lib\connection.js:730:11) {message: 'getaddrinfo ENOTFOUND mongodb.safra-data', reason: TopologyDescription, code: undefined, stack: 'MongooseServerSelectionError: getaddrinfo ENO…modules\\mongoose\\lib\\connection.js:730:11)'}
+
+index.js:13
+arg0 =
+MongooseServerSelectionError: getaddrinfo ENOTFOUND mongodb.safra-data\n    at _handleConnectionErrors (H:\Documents\fee-management-backend\node_modules\mongoose\lib\connection.js:755:11)\n    at NativeConnection.openUri (H:\Documents\fee-management-backend\node_modules\mongoose\lib\connection.js:730:11) {message: 'getaddrinfo ENOTFOUND mongodb.safra-data', reason: TopologyDescription, code: undefined, stack: 'MongooseServerSelectionError: getaddrinfo ENO…modules\\mongoose\\lib\\connection.js:730:11)'}
+<anonymous> @ h:\Documents\fee-management-backend\src\core\data\index.js:13:54
