--- a/.gitignore
+++ b/.gitignore
@@ -1,75 +1,36 @@
-async #getFeeExceptionFromSQL(cif) {
-  global.logger.info(`getFeeExceptionFromSQL() - CIF: ${cif}`);
+async execute({ customerAccount }) {
+  global.logger.info(`FeeGetByCifUseCase() - CIF: ${customerAccount[0].cifno}`);
 
-  if (!cif) {
-    throw new Error('CIF is required to fetch exception fees');
-  }
+  const result = { fees: [] };
+  const cif = customerAccount[0].cifno;
 
-  const connection = await connectToFeeMgmtDb();
-  const recordset = await executeStoreProcedure(connection, 'sp_get_fees_byCIF', { cifno: cif });
+  // Buscar dados do SQL
+  const standardFees = await this.#getFeeStandardFromSQL(cif);
+  const exceptionFees = await this.#getFeeExceptionFromSQL(cif);
+  const fees = [...standardFees, ...exceptionFees];
 
-  if (!recordset || recordset.length === 0) {
-    global.logger.warn(`No exception fees found for CIF: ${cif}`);
-    return [];
-  }
+  const customer = new CustomerFees(fees, customerAccount);
+  if (customer.fee) result.fees.push(customer.fee);
+  
+  const bank = new BankAccountFee(fees, customerAccount);
+  if (bank.fee) result.fees.push(bank.fee);
 
-  const feeResult = recordset.map((record) => ({
-    feeType: record.feeType,
-    feeGroups: [
-      {
-        name: record.feeGroup,
-        code: record.groupCode,
-        fields: [
-          {
-            code: record.fieldCode,
-            name: record.fieldName,
-            defaultValue: record.defaultValue,
-            isException: record.isException === 1,
-            exceptionOptions: record.exceptionOptions ? JSON.parse(record.exceptionOptions) : [],
-          },
-        ],
-      },
-    ],
+  const equityField = await Field.find({ code: 7 });
+  const investiment = new InvestimentAccountFee(fees, customerAccount, equityField[0]);
+  if (investiment.fee?.feeGroups) result.fees.push(investiment.fee);
+
+  const feesActives = await FeeCase.find({
+    cif: cif,
+    status: { $nin: ['DONE', 'REJECTED'] },
+    caseNumber: { $exists: true },
+  });
+
+  result.feesActives = feesActives?.map((x) => ({
+    caseNumber: x.caseNumber,
+    id: x.id,
   }));
 
-  return feeResult;
-}
+  result.documentUrl = 'https://minio-ui.dev.k8s.safra.int/api/v1/buckets/jarvis-public/objects/download?preview=true&prefix=U2NoZWR1bGVPZkZlZXMucGRm';
 
-
-
-
-async #getFeeStandardFromSQL(cif) {
-  global.logger.info(`getFeeStandardFromSQL() - CIF: ${cif}`);
-
-  if (!cif) {
-    throw new Error('CIF is required to fetch standard fees');
-  }
-
-  const connection = await connectToFeeMgmtDb();
-  const recordset = await executeStoreProcedure(connection, 'sp_get_fees_byCIF', { cifno: cif });
-
-  if (!recordset || recordset.length === 0) {
-    global.logger.warn(`No standard fees found for CIF: ${cif}`);
-    return [];
-  }
-
-  const feeResult = recordset.map((record) => ({
-    feeType: record.feeType,
-    feeGroups: [
-      {
-        name: record.feeGroup,
-        code: record.groupCode,
-        fields: [
-          {
-            code: record.fieldCode,
-            name: record.fieldName,
-            defaultValue: record.defaultValue,
-            isStandard: record.isStandard === 1,
-          },
-        ],
-      },
-    ],
-  }));
-
-  return feeResult;
+  return Result.ok(result);
 }
